codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__experimental_features_view__tests__experimental_features_server_discovery.snap
---
source: tui/src/bottom_pane/experimental_features_view_tests.rs
expression: buffer_text(&buffer)
---

  Experimental features
  Checked features are configured on. Some experimental features take effect only in new tasks or
  after restarting the Codex server.


› [x] Server network_proxy       Description supplied by the server.
  [x] Server future_feature      Description supplied by the server.
  [x] Server prevent_idle_sleep  Description supplied by the server.


  space toggle · enter save · esc save/close
